<resources>
    <string name="app_name">Sment</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="textview">Question</string>
    <string name="_5_10">5/10</string>
    <string name="share">Share</string>
    <string name="next">Next</string>
    <string name="level_0">Level 0</string>
    <string name="end">END</string>
    <string name="skip">SKIP</string>
    <string name="level">\Level  \</string>
    <string name="remaining_time_5_second">Remaining Time :- 5 Second</string>
    <string name="time">Remaining Time :- </string>
    <string name="option_a">OPTION A</string>
    <string name="option_b">OPTION B</string>
    <string name="option_c">OPTION C</string>
    <string name="option_d">OPTION D</string>
    <string name="score">Score</string>
    <string name="_5">5</string>
    <string name="out_of_10">Out of 10</string>
    <string name="done">Done</string>
    <string name="what_is_your_experience_in_terms_of_programming_or_coding">What is your Experience in terms of Programming or Coding?</string>
    <string name="what_is_your_expectation_from_this_application">What is your Expectation from this application?</string>
    <string name="what_type_of_person_are_you">What type of person are you?</string>
    <string name="welcome_text">Welcome To Skill Assesment</string>
    <string name="login">Login</string>
    <string name="design">Design</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login_with_google">LOGIN WITH GOOGLE</string>
    <string name="passhint">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="retype_password">Retype Password</string>
    <string name="submit">Submit</string>
    <string name="send_email">Send Email</string>
    <string name="survey">Survey</string>
    <string name="logout">Logout</string>
    <string name="first_and_last_name">First And Last Name</string>
    <!--    <string name="default_web_client_id">415220481022-0o8rm99e5vuov09e0q2vmj8uj2j6vbpd.apps.googleusercontent.com</string>-->

    <string name="title_activity_survey_details">SurveyDetailsActivity</string>

    <string name="first_fragment_label">First Fragment</string>

    <string name="second_fragment_label">Second Fragment</string>

    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sment">SMENT</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string-array name="question_array">
        <item>How many year of Experience in Programming?</item>
        <item>Why do you want to test your skill?</item>
        <item>Your work style is extremely Organized and Methodical</item>
        <item>You learn best by</item>
        <item>What is your Current Designation</item>
    </string-array>

    <string-array name="option1">
        <item>0 to 1 Year</item>
        <item>Placements</item>
        <item>Agree</item>
        <item>Researching and Analyzing</item>
        <item>Student</item>
    </string-array>
    <string-array name="option2">
        <item>1 to 5 Year</item>3
        <item>Upskill</item>
        <item>Not Agree</item>
        <item>Jumping into Project Head On</item>
        <item>Working Professional</item>
    </string-array>
    <string-array name="option3">
        <item>More than 5 Year</item>
    </string-array>
</resources>
