<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bgHeader"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/header_register"
        android:theme="@style/ToolbarTheme"
        android:elevation="5dp"/>
    
    <TextView
        android:id="@+id/tvSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:transitionName="tvLogin"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:elevation="10dp" />

    <ImageView
        android:id="@+id/circle1"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:layout_below="@+id/bgHeader"
        android:src="@drawable/circletransparent"
        android:layout_marginTop="-5dp"
        android:layout_marginStart="-25dp"
        android:contentDescription="@string/design" />

    <ImageView
        android:id="@+id/circle3"
        android:layout_width="182dp"
        android:layout_height="182dp"
        android:src="@drawable/circle"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-80dp"
        android:layout_marginBottom="-30dp"
        android:contentDescription="@string/design" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/bgHeader"
        android:layout_margin="20dp">
        <RelativeLayout
            android:id="@+id/rlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:layout_margin="20dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="50dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/full_name"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_margin="10dp"
                        android:textColor="@color/colorPurple"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_margin="10dp"
                        android:textColor="@color/colorPurple"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:inputType="textEmailAddress"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_margin="10dp"
                        android:textColor="@color/colorPurple"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/retype_password"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_margin="10dp"
                        android:textColor="@color/colorPurple"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cv"
                android:layout_alignStart="@id/cv"
                android:layout_alignEnd="@id/cv"
                android:elevation="10dp"
                android:layout_marginTop="-30dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp">

                <Button
                    android:id="@+id/btSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:background="@drawable/bg_ui"
                    android:textColor="@android:color/white"/>

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>