<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="5dp"
    tools:context=".LoginActivity"
    tools:ignore="VectorDrawableCompat">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bgHeader"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@drawable/header_login" />
    
    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:textSize="17sp"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@+id/tvDesc"
        android:transitionName="tvLogin"
        android:layout_alignStart="@+id/tvDesc"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"/>
    
    <ImageView
        android:id="@+id/circle1"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:layout_below="@+id/bgHeader"
        android:src="@drawable/circletransparent"
        android:layout_marginTop="-80dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="-100dp"
        android:contentDescription="@string/design" />

    <ImageView
        android:id="@+id/circle2"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:src="@drawable/circletransparent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="-100dp"
        android:contentDescription="@string/design" />

    <ImageView
        android:id="@+id/circle3"
        android:layout_width="182dp"
        android:layout_height="182dp"
        android:src="@drawable/circle"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="-80dp"
        android:layout_marginBottom="-30dp"
        android:contentDescription="@string/design" />

    <ImageView
        android:id="@+id/circle4"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:src="@drawable/circletransparent"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-50dp"
        android:layout_marginBottom="-50dp"
        android:layout_toStartOf="@id/circle3"
        android:contentDescription="@string/design" />

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:layout_margin="20dp"
                app:cardElevation="2dp">
                
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="50dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/username"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_margin="10dp"
                        android:textColor="@color/colorPurple"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_margin="10dp"
                        android:textColor="@color/colorPurple"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cv"
                android:layout_alignStart="@id/cv"
                android:layout_alignEnd="@id/cv"
                android:elevation="10dp"
                android:layout_marginTop="-50dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp">

                <Button
                    android:id="@+id/btLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:background="@drawable/bg_ui"
                    android:textColor="@android:color/white"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/cv"
                android:layout_alignTop="@id/cv"
                android:layout_marginEnd="-20dp"

                android:elevation="10dp">

                <ImageButton
                    android:id="@+id/btRegister"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_add"
                    android:background="@drawable/bg_ui"
                    android:contentDescription="@string/design" />

            </RelativeLayout>
            
            <TextView
                android:id="@+id/tvForgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:elevation="5dp"
                android:text="@string/forgot_your_password"
                android:textSize="14sp"
                android:layout_below="@id/cv"/>
            
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:layout_below="@id/tvForgot"
                android:layout_alignStart="@id/cv"
                android:layout_alignEnd="@id/cv"
                android:text="@string/login_with_google"
                android:textColor="@color/colorPurple"
                android:drawableStart="@drawable/google"
                android:background="@drawable/bt_uifb"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>