<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.SurveyActivity"
        android:background="@drawable/unsplash">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/surveyheader"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@android:color/transparent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="38sp"
            android:text="Survey"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="10dp" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surveyheader">

        <TextView
            android:id="@+id/no_indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Question: 1/5"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:gravity="center"
            android:text="Questiondfdsfdsmfdsnfdsnfdsfndsjfds"
            android:textColor="@android:color/holo_green_light"
            android:textStyle="bold"
            android:textSize="45sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/options_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="2dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_borders"
            android:backgroundTint="#989898"
            android:text="@string/option_a"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_borders"
            android:backgroundTint="#989898"
            android:text="@string/option_b"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_borders"
            android:backgroundTint="#989898"
            android:text="@string/option_c"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="409dp"
        android:layout_height="206dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/options_container">

        <Button
            android:id="@+id/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:background="@drawable/bg_ui"
            android:layout_margin="10dp"
            android:text="previous" />

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:background="@drawable/bg_ui"
            android:layout_margin="10dp"
            android:text="next" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>